--- a/app/src/main/res/layout/item_header_drawer_layout.xml
+++ b/app/src/main/res/layout/item_header_drawer_layout.xml
@@ -15,14 +15,15 @@
         android:id="@+id/nav_header_imageView"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/ic_suitcase" />
 
     <TextView
-        android:textColor="@color/dc_white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="My header title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:fontFamily="@font/poppins"
+        android:text="Travel Routine"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/dc_white" />
 
 
 </LinearLayout>
