--- a/app/src/main/res/layout/activity_input_event.xml
+++ b/app/src/main/res/layout/activity_input_event.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/inputLinearLayout"
+    android:id="@+id/inputEventLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/backgroundcolor"
@@ -16,16 +16,17 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="@dimen/spacing_medium"
-            android:textColorHint="?attr/textcolor">
+            android:textColorHint="?attr/textcolor"
+            android:layout_margin="@dimen/spacing_medium">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/etRoutine"
-                android:layout_width="match_parent"
+                android:id="@+id/etEvent"
                 android:background="@null"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Whats Your Routine ?"
-                android:textColor="?attr/textcolor" />
+                android:hint="Input Your Event"
+                android:textColor="?attr/textcolor"
+                />
         </android.support.design.widget.TextInputLayout>
     </android.support.v7.widget.CardView>
 
@@ -51,12 +52,12 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/etRoutineDate"
-                    android:layout_width="match_parent"
+                    android:id="@+id/etSelectedEventDate"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textColorHint="?attr/textcolor"
                     android:background="@null"
+                    android:textColorHint="?attr/textcolor"
                     android:descendantFocusability="blocksDescendants"
                     android:focusable="false"
                     android:gravity="center"
@@ -66,13 +67,14 @@
 
 
                 <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/swRoutineReminder"
+                    android:id="@+id/swDepartReminderEvent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/spacing_medium" />
 
                 <ImageView
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -87,9 +89,9 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/tvRoutineDatesReminderViews"
-                android:layout_width="match_parent"
                 android:textColor="?attr/textcolor"
+                android:id="@+id/tvEventReminderViews"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing_medium"
                 android:layout_marginRight="@dimen/spacing_medium"
@@ -111,7 +113,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnPickRoutineTag"
+                    android:id="@+id/btnPickEventTag"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -120,6 +122,13 @@
                     android:padding="@dimen/spacing_medium"
                     android:text="Select Tag"
                     android:textColor="?attr/textcolor" />
+
+                <ImageView
+                    android:id="@+id/ivPicksIcon"
+                    android:layout_width="79dp"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    android:src="@drawable/ic_style_gray_24dp" />
 
             </LinearLayout>
 
@@ -130,7 +139,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
+            <TextView
                 android:id="@+id/etArrivalReminderViews"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -155,7 +164,6 @@
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/etUsernameLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/spacing_medium"
@@ -164,13 +172,13 @@
                 android:textColorHint="?attr/textcolor">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/etRoutineDescription"
+                    android:id="@+id/etEventDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:drawablePadding="8dp"
-                    android:gravity="top|left"
-                    android:hint="Input Routine Description"
+                    android:gravity="top|start"
+                    android:hint="Input Items"
                     android:inputType="textMultiLine"
                     android:lines="8"
                     android:maxLines="10"
@@ -183,9 +191,8 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
     <Button
-        android:id="@+id/btnRoutineSave"
+        android:id="@+id/btnSaveEvents"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center|bottom"
