--- a/app/src/main/res/layout/activity_output_routines.xml
+++ b/app/src/main/res/layout/activity_output_routines.xml
@@ -16,7 +16,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:src="@drawable/ic_event"/>
+            android:src="@drawable/ic_reminder"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
