--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -12,20 +12,21 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/spacing_medium"
+            android:layout_margin="@dimen/spacing_small"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/ivTagsOnly"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_margin="@dimen/spacing_medium" />
+                android:layout_margin="@dimen/spacing_small" />
 
             <TextView
                 android:id="@+id/tvTags"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:fontFamily="@font/poppins"
                 android:layout_toRightOf="@id/ivTagsOnly"
                 tools:text="Testings" />
 
