adding weekly reminder ! lets start a good day sir

--- a/app/src/main/res/layout/activity_weekly_remind_pager.xml
+++ b/app/src/main/res/layout/activity_weekly_remind_pager.xml
@@ -15,7 +15,8 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            app:tabMode="fixed"
+            app:tabGravity="center"
+            app:tabMode="scrollable"
             app:tabSelectedTextColor="#ffffff" />
     </android.support.design.widget.AppBarLayout>
 
